<resources>
    <string name="app_name">人脸识别系统</string>
    <string name="backstage_title">人脸识别门禁系统</string>
    <string name="backstage_content">欢迎使用人脸识别门禁系统</string>
    <string name="backstage_content2">祝您体验愉快</string>
    <string name="backstage_button">设置</string>
    <string name="settingcheck_title">设置验证</string>
    <string name="settingcheck_prompt">用户设置</string>
    <string name="settingcheck_etpwd">密码</string>
    <string name="settingcheck_ethint">8-16位，只包含数字/字母</string>
    <string name="settingcheck_btn">确定</string>
    <string name="systemsetting">系统设置</string>
    <string name="single_register">单人注册</string>
    <string name="mutil_register">批量注册</string>
    <string name="face_query">人脸库查询</string>
    <string name="face_daily">人脸日志</string>
    <string name="door_control">门禁管理</string>
    <string name="threshold_control">阈值管理</string>
    <string name="systempwd_control">系统密码管理</string>
    <string name="show_pic">显示头像</string>
    <string name="access_pic">底库照片</string>
    <string name="please_input">请输入</string>
    <string name="register">提交</string>
    <string name="unregister">取消</string>
    <string name="submit">提交注册</string>
    <string name="doortype">门禁控制\n器类型</string>
    <string name="IP">IP</string>
    <string name="doormsg">基本信息</string>
    <string name="threshold">阈值:</string>
    <string name="threshold_default">82</string>
    <string name="interval">识别间隔:</string>
    <string name="interval_default">15</string>
    <string name="controller_ip">控制器IP:</string>
    <string name="controller_ip_default">172.16.5.33</string>
    <string name="controller_port">控制器端口:</string>
    <string name="controller_port_default">5000</string>
    <string name="duration">开门时间:</string>
    <string name="duration_default">8</string>
    <string name="server_ip">服务端IP:</string>
    <string name="server_ip_default">172.16.6.20</string>
    <string name="server_port">服务端端口:</string>
    <string name="server_port_default">12001</string>
    <string name="door_ip">门禁IP:</string>
    <string name="door_ip_default">172.16.5.33</string>
    <string name="door_port">门禁端口:</string>
    <string name="door_port_default">6000</string>
    <string name="door_id">门禁ID:</string>
    <string name="door_id_default">1</string>
    <string name="door_control_type">门禁类型:</string>
    <string name="door_control_type_default">0</string>
    <string name="result">\u3000\u3000信息读取失败\n请重试或者联系管理员</string>
</resources>
