<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    android:orientation="vertical"
    tools:context="com.minivision.machinefacerecognition.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/title_rv"
            android:layout_width="match_parent"
            android:layout_height="200px"
            android:background="@color/colorBlack">

            <ImageView
                android:id="@+id/back_imgv"
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15px"
                android:background="@mipmap/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/settingcheck_title"
                android:textColor="@color/colorWhite"
                android:textSize="48px" />
        </RelativeLayout>


        <TextView
            android:id="@+id/prompt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/settingcheck_prompt"
            android:textColor="@color/color6f7974"
            android:textSize="48px" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:text="@string/settingcheck_etpwd"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/pwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_"
                android:hint="@string/settingcheck_ethint"
                android:maxLength="16"
                android:paddingBottom="5dp"
                android:paddingLeft="25dp"
                android:singleLine="true"
                android:textSize="14dp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/confim_btn"
        android:layout_width="1500px"
        android:layout_height="140px"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_blue_shape"
        android:text="@string/settingcheck_btn"
        android:textColor="@color/colorWhite"
        android:textSize="60px" />
</RelativeLayout>
