<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    android:orientation="vertical"
    tools:context="com.minivision.machinefacerecognition.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/title_rv"
            android:layout_width="match_parent"
            android:layout_height="200px"
            android:background="@color/colorBlack">

            <ImageView
                android:id="@+id/back_imgv"
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15px"
                android:background="@mipmap/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/door_control"
                android:textColor="@color/colorWhite"
                android:textSize="48px" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="84px"
            android:layout_marginLeft="15px"
            android:paddingTop="15px"
            android:text="@string/doormsg"
            android:textColor="@color/color6f7974"
            android:textSize="48px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/door"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15px"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/doortype"
                    android:textSize="60px" />


            </RelativeLayout>

            <TextView
                android:layout_width="200px"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:entries="@array/location"
                android:theme="@style/spinner_style" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/line" />


        <FrameLayout
            android:id="@+id/content_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/confim_btn"
        android:layout_width="1500px"
        android:layout_height="140px"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60px"
        android:background="@drawable/btn_blue_shape"
        android:text="@string/settingcheck_btn"
        android:textColor="@color/colorWhite"
        android:textSize="60px" />
</RelativeLayout>
