<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_rv"
        android:layout_width="match_parent"
        android:layout_height="200px"
        android:background="@color/colorBlack">

        <ImageView
            android:id="@+id/back_imgv"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15px"
            android:background="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/single_register"
            android:textColor="@color/colorWhite"
            android:textSize="48px" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_pic"
        android:layout_width="match_parent"
        android:layout_height="84px"
        android:layout_below="@+id/title_rv"
        android:layout_marginLeft="15px"
        android:paddingTop="15px"
        android:text="图片"
        android:textColor="@color/color6f7974"
        android:textSize="48px" />

    <include layout="@layout/single_item_pic" />


    <TextView
        android:id="@+id/user_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/single_item_pic_ll"
        android:layout_marginBottom="15px"
        android:layout_marginLeft="15px"
        android:layout_marginTop="30px"
        android:text="个人信息"
        android:textColor="@color/color6f7974"
        android:textSize="48px" />

    <include layout="@layout/single_user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20px"
        android:orientation="vertical">

        <Button
            android:id="@+id/register_btn"
            android:layout_width="1500px"
            android:layout_height="140px"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_blue_shape"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="60px" />

        <Button
            android:id="@+id/unregister_btn"
            android:layout_width="1500px"
            android:layout_height="140px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_white_shape"
            android:text="@string/unregister"
            android:textColor="@color/color00c4e6"
            android:textSize="60px" />
    </LinearLayout>
</RelativeLayout>