<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/title_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack">

            <ImageView
                android:id="@+id/back_imgv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:background="@mipmap/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/systempwd_control"
                android:textColor="@color/colorWhite"
                android:textSize="48px" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="密码设置" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="原密码"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/oldpwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/colorWhite"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_"
                android:hint="@string/settingcheck_ethint"
                android:maxLength="16"
                android:paddingBottom="5dp"
                android:paddingLeft="25dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textSize="14dp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:text="新密码"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/newpwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/colorWhite"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_"
                android:hint="@string/settingcheck_ethint"
                android:maxLength="16"
                android:paddingBottom="5dp"
                android:paddingLeft="25dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textSize="14dp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:text="确认新密码"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/confimpwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/colorWhite"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_"
                android:hint="@string/settingcheck_ethint"
                android:maxLength="16"
                android:paddingBottom="5dp"
                android:paddingLeft="25dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textSize="14dp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/confim_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_blue_shape"
        android:text="@string/settingcheck_btn"
        android:textSize="16dp" />
</RelativeLayout>